force-app/main/default/objects/Freezer_Request__c/Freezer_Request__c.object-meta.xml
<CustomObject>
    <label>Freezer Request</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Freezer Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freezer Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>