force-app/main/default/objects/Freezer_Request__c/fields/Approval_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Status__c</fullName>
    <label>Approval Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request received</fullName>
                <default>true</default>
                <label>Request received</label>
            </value>
            <value>
                <fullName>Request in L1 approval</fullName>
            </value>
            <value>
                <fullName>Request in L2 approval</fullName>
            </value>
            <value>
                <fullName>Request in L3 approval</fullName>
            </value>
            <value>
                <fullName>Request approved</fullName>
            </value>
            <value>
                <fullName>Request rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>