force-app/main/default/objects/Freezer_Request__c/fields/ASM_Emp_Number__c.field-meta.xml
<CustomField>
    <fullName>ASM_Emp_Number__c</fullName>
    <formula>ASM_Name__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM Emp Number</label>
    <type>Text</type>
</CustomField>