force-app/main/default/objects/Freezer_Request__c/fields/ASM_Name__c.field-meta.xml
<CustomField>
    <fullName>ASM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Freezer_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>