force-app/main/default/objects/Freezer_Request__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset (NA)</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Freezer Requests</relationshipLabel>
    <relationshipName>Freezer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>