force-app/main/default/objects/Freezer_Request__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <formula>Assets__r.Asset_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Code</label>
    <type>Text</type>
</CustomField>