force-app/main/default/objects/Freezer_Request__c/fields/Asset_Product__c.field-meta.xml
<CustomField>
    <fullName>Asset_Product__c</fullName>
    <formula>Assets__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Product</label>
    <type>Text</type>
</CustomField>