force-app/main/default/objects/Freezer_Request__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Freezer Requests</relationshipLabel>
    <relationshipName>Freezer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>