force-app/main/default/objects/Freezer_Request__c/fields/Board_Size__c.field-meta.xml
<CustomField>
    <fullName>Board_Size__c</fullName>
    <label>Board Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>