force-app/main/default/objects/Freezer_Request__c/fields/Board_Type__c.field-meta.xml
<CustomField>
    <fullName>Board_Type__c</fullName>
    <label>Board Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>