force-app/main/default/objects/Freezer_Request__c/fields/Competitor_Converted__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Converted__c</fullName>
    <label>Competitor Converted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>