force-app/main/default/objects/Freezer_Request__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>