force-app/main/default/objects/Freezer_Request__c/fields/DD_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>DD_Cheque_Number__c</fullName>
    <label>DD/Cheque Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>