force-app/main/default/objects/Freezer_Request__c/fields/Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Type__c</fullName>
    <label>Deposit Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>