force-app/main/default/objects/Freezer_Request__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <formula>Distributor_Name__r.Code__c</formula>
    <label>Distributor Code</label>
    <type>Text</type>
</CustomField>