force-app/main/default/objects/Freezer_Request__c/fields/Freezer_capacity__c.field-meta.xml
<CustomField>
    <fullName>Freezer_capacity__c</fullName>
    <label>Freezer capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>