force-app/main/default/objects/Freezer_Request__c/fields/Freezer_Make__c.field-meta.xml
<CustomField>
    <fullName>Freezer_Make__c</fullName>
    <label>Freezer Make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>