force-app/main/default/objects/Freezer_Request__c/fields/Freezer_Model__c.field-meta.xml
<CustomField>
    <fullName>Freezer_Model__c</fullName>
    <label>Freezer Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>