force-app/main/default/objects/Freezer_Request__c/fields/Outlet_Address__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Address__c</fullName>
    <formula>Outlet_Name__r.BillingStreet &amp; BR() &amp;
Outlet_Name__r.BillingCity &amp; &quot;, &quot; &amp;
Outlet_Name__r.BillingState &amp; &quot; &quot; &amp;
Outlet_Name__r.BillingPostalCode &amp; BR() &amp;
Outlet_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Address</label>
    <type>Text</type>
</CustomField>