force-app/main/default/objects/Freezer_Request__c/fields/Outlet_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Outlet_GSTIN__c</fullName>
    <formula>Outlet_Name__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet GSTIN</label>
    <type>Text</type>
</CustomField>