force-app/main/default/objects/Freezer_Request__c/fields/Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Freezer Requests (Outlet Name)</relationshipLabel>
    <relationshipName>Freezer_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>