force-app/main/default/objects/Freezer_Request__c/fields/Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Type__c</fullName>
    <formula>TEXT(Outlet_Name__r.Outlets_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Type</label>
    <type>Text</type>
</CustomField>