force-app/main/default/objects/Freezer_Request__c/fields/Reason_for_request_transfer__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_request_transfer__c</fullName>
    <label>Reason for request / transfer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>