force-app/main/default/objects/Freezer_Request__c/fields/Sales_Executive_Emp_number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_Emp_number__c</fullName>
    <formula>Sales_Executive_Name__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Executive Emp number</label>
    <type>Text</type>
</CustomField>