force-app/main/default/objects/Freezer_Request__c/fields/Sales_Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Freezer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>