force-app/main/default/objects/Freezer_Request__c/fields/Supporting_Document__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document__c</fullName>
    <label>Supporting Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Rent Agreement</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>