force-app/main/default/objects/Freezer_Request__c/fields/Supporting_Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_Upload__c</fullName>
    <label>Supporting Document Upload</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>