force-app/main/default/objects/Freezer_Request__c/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <label>Total Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>