force-app/main/default/objects/Freezer_Request__c/fields/Transfer_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_type_Name__c</field>
            <operation>notEqual</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Freezer Requests (Transfer Distributor)</relationshipLabel>
    <relationshipName>Transfer_distributor</relationshipName>
    <type>Lookup</type>
</CustomField>