force-app/main/default/objects/Freezer_Request__c/fields/Transfer_location__c.field-meta.xml
<CustomField>
    <fullName>Transfer_location__c</fullName>
    <label>Transfer location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Distributor point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>