force-app/main/default/objects/Freezer_Request__c/fields/Transfer_retailer__c.field-meta.xml
<CustomField>
    <fullName>Transfer_retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer retailer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_type_Name__c</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Freezer Requests (Transfer retailer)</relationshipLabel>
    <relationshipName>Transfer_retailer</relationshipName>
    <type>Lookup</type>
</CustomField>