force-app/main/default/objects/Freezer_Request__c/fields/Transfer_Retailer_Code_New__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Retailer_Code_New__c</fullName>
    <formula>Transfer_retailer__r.Retailer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Retailer Code (New)</label>
    <type>Text</type>
</CustomField>