force-app/main/default/objects/Freezer_Request__c/fields/Type_of_request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_request__c</fullName>
    <label>Type of request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pull out to DB</fullName>
            </value>
            <value>
                <fullName>Pull out to Warehouse</fullName>
            </value>
            <value>
                <fullName>Transfer to other outlet</fullName>
            </value>
            <value>
                <fullName>Transfer to other distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>