force-app/main/default/objects/Freezer_Request__c/recordTypes/New_Request.recordType-meta.xml
<RecordType>
    <fullName>New_Request</fullName>
    <active>true</active>
    <label>New Request</label>
</RecordType>