force-app/main/default/objects/Freezer_Request__c/recordTypes/Transfer_Request.recordType-meta.xml
<RecordType>
    <fullName>Transfer_Request</fullName>
    <active>true</active>
    <label>Transfer Request</label>
</RecordType>