force-app/main/default/objects/Freezer_Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Outlet_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Freezer_Make__c</columns>
    <columns>Freezer_Model__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>