force-app/main/default/objects/Freezer_Request__c/listViews/New_Request.listView-meta.xml
<ListView>
    <fullName>New_Request</fullName>
    <columns>NAME</columns>
    <columns>Freezer_Make__c</columns>
    <columns>Freezer_Model__c</columns>
    <columns>Outlet_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Total_Deposit__c</columns>
    <columns>Sales_Executive_Name__c</columns>
    <columns>ASM_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>New Request</label>
</ListView>