force-app/main/default/objects/Freezer_Request__c/listViews/Transfer_Freezer_Request.listView-meta.xml
<ListView>
    <fullName>Transfer_Freezer_Request</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>Freezer_Make__c</columns>
    <columns>Freezer_Model__c</columns>
    <columns>Outlet_Name__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Total_Deposit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Executive_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Freezer_Request__c.Transfer_Request</value>
    </filters>
    <label>Transfer Freezer Request</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>